fix nowrapped labels and make blocks look hidden

--- a/theme/bootstrap/less/moodle/blocks.less
+++ b/theme/bootstrap/less/moodle/blocks.less
@@ -29,8 +29,7 @@
 }
 
 .block-region .invisible {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
+  .opacity(50);
 }
 div#dock {
   display: none // MDL-35228
